Partners got responsivity

--- a/index.html
+++ b/index.html
@@ -52,13 +52,29 @@
     </section>
 
     <div class="partners mw-100 d-flex justify-content-center">
-        <p class="fw-500 m-0 d-flex align-items-center">Apoiado por:</p>
-        <div class="partners-icons d-flex align-items-center">
+        <p class="fw-500 m-0 pe-2 d-flex align-items-center">Apoiado por:</p>
+        <div uk-slider class=" d-flex align-items-center justify-content-center">
+            <ul class="uk-slider-items uk-child-width-1-5@s uk-child-width-1-3 d-flex align-items-center justify-content-center mw-100">
+                <li class="pe-2 ps-2">
+                    <img src="assets/img/partners/google.png" alt="">
+                </li>
+                <li class="pe-2 ps-2">
+                    <img src="assets/img/partners/netflix.png" alt="">
+                </li>
+                <li class="pe-2 ps-2">
+                    <img src="assets/img/partners/paypal.png"  alt="">
+                </li>
+                <li class="pe-2 ps-2">
+                    <img src="assets/img/partners/peg.png"  alt="">
+                </li>
+            </ul>
+        </div>
+        <!--<div class="partners-icons d-flex align-items-center mw-100">
             <img src="assets/img/partners/google.png" alt="">
             <img src="assets/img/partners/netflix.png" alt="">
-            <img src="assets/img/partners/paypal.png" alt="">
-            <img src="assets/img/partners/peg.png" alt="">
-        </div>
+            <img src="assets/img/partners/paypal.png"  alt="">
+            <img src="assets/img/partners/peg.png"  alt="">
+        </div>-->
     </div>
 
     <section class="services">
