--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     
     <section class="hero row mw-100 d-flex flex-column justify-content-center m-0">
-        <div class="col-6 p-0">
+        <div class="col col-xl-6 p-0 d-flex flex-column justify-content-center">
             <h1 class="mb-5">Ache os melhores <i>engenheiros</i> para sua empresa hoje mesmo!</h1>
             <div class="input-group search-bar mb-4">
                 <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
