Footer got responsivity

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     </div>
 
     <footer class="footer">
-        <div class="row mw-100">
+        <div class="row mw-100 gap-2">
             <ul class="col p-0 d-flex flex-column">
                 <p class="footer-title fw-700">Categorias</p>
                 <a href="#" class="footer-link">Música</a>
@@ -555,6 +555,7 @@
                 <a href="#" class="footer-link">Arte</a>
                 <a href="#" class="footer-link">Mais</a>
             </ul>
+            <div class="mw-100 d-block d-md-none"></div>
             <ul class="col p-0 d-flex flex-column">
                 <p class="footer-title fw-700">Sobre</p>
                 <a href="#" class="footer-link">Carreiras</a>
@@ -564,6 +565,7 @@
                 <a href="#" class="footer-link">API</a>
                 <a href="#" class="footer-link">CNPJ</a>
             </ul>
+            <div class="mw-100 d-block d-md-none"></div>
             <ul class="col p-0 d-flex flex-column">
                 <p class="footer-title fw-700">Ajuda e politicas</p>
                 <a href="#" class="footer-link">Politica de compra</a>
@@ -571,6 +573,7 @@
                 <a href="#" class="footer-link">Termos de uso</a>
                 <a href="#" class="footer-link">Ajuda</a>
             </ul>
+            <div class="mw-100 d-block d-lg-none"></div>
             <ul class="col p-0 d-flex flex-column">
                 <p class="footer-title fw-700">Comunidade</p>
                 <a href="#" class="footer-link">Se torne Premium</a>
@@ -580,6 +583,7 @@
                 <a href="#" class="footer-link">Bolsas</a>
                 <a href="#" class="footer-link">Internos</a>
             </ul>
+            <div class="mw-100 d-block d-md-none"></div>
             <ul class="col p-0 d-flex flex-column">
                 <p class="footer-title fw-700">Extras</p>
                 <a href="#" class="footer-link">Skype</a>
