--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="nav-container d-flex justify-content-center">
-    <nav class="nav main-nav">
+    <nav class="nav main-nav" fixed>
         <button class="uk-button uk-button-default mobile-menu-button d-block d-xl-none" type="button" uk-toggle="target: #offcanvas-nav">
             <svg xmlns="http://www.w3.org/2000/svg" class="mobile-menu-icon" width="23" height="19" viewBox="0 0 23 19"><rect y="16" width="23" height="3" rx="1.5" fill="#555"></rect><rect width="23" height="3" rx="1.5" fill="#555"></rect><rect y="8" width="23" height="3" rx="1.5" fill="#555"></rect></svg>
         </button>
