--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="nav-container d-flex justify-content-center">
-    <nav class="nav main-nav" fixed>
+    <nav class="nav main-nav">
         <button class="uk-button uk-button-default mobile-menu-button d-block d-xl-none" type="button" uk-toggle="target: #offcanvas-nav">
             <svg xmlns="http://www.w3.org/2000/svg" class="mobile-menu-icon" width="23" height="19" viewBox="0 0 23 19"><rect y="16" width="23" height="3" rx="1.5" fill="#555"></rect><rect width="23" height="3" rx="1.5" fill="#555"></rect><rect y="8" width="23" height="3" rx="1.5" fill="#555"></rect></svg>
         </button>
@@ -91,7 +91,7 @@
 </div>
 
 <section class="services">
-    <h1 class="mb-5 fw-500 services-title">Nossos principais serviços</h1>
+    <h1 class="mb-5 fw-500 services-title services-title-container">Nossos principais serviços</h1>
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
         <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-5@m uk-grid-small">
