Filter kit was prototyped

--- a/search.html
+++ b/search.html
@@ -11,8 +11,10 @@
     <script src="assets/js/uikit-icons.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/filter-kit.css">
     <script src="assets/js/bootstrap.js" defer></script>
     <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/filter-kit.js" defer></script>
     <title>Projetar.me</title>
     <style>
 
@@ -88,6 +90,47 @@
 
 <section class="search-menu-section">
     <h1>Exibindo resultados de "Pesquisa"</h1>
+    <div class="filters-kit d-flex flex-row">
+        <div class="filter-kit">
+            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <div class="options-category-kit">
+                <div class="option-main-kit">
+                    <a href="#">Todas as categorias</a>
+                    <p>(1.340)</p>
+                </div>
+                <div class="option-kit">
+                    <a href="#">Categoria y</a>
+                    <p>(1.000)</p>
+                </div>
+            </div>
+        </div>
+        <div class="filter-kit">
+            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <div class="options-category-kit">
+                <div class="option-main-kit">
+                    <a href="#">Todas as categorias</a>
+                    <p>(1.340)</p>
+                </div>
+                <div class="option-kit">
+                    <a href="#">Categoria y</a>
+                    <p>(1.000)</p>
+                </div>
+            </div>
+        </div>
+        <div class="filter-kit">
+            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <div class="options-category-kit">
+                <div class="option-main-kit">
+                    <a href="#">Todas as categorias</a>
+                    <p>(1.340)</p>
+                </div>
+                <div class="option-kit">
+                    <a href="#">Categoria y</a>
+                    <p>(1.000)</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <footer class="footer">
