--- a/search.html
+++ b/search.html
@@ -92,7 +92,7 @@
     <h1>Exibindo resultados de "Pesquisa"</h1>
     <div class="filters-kit d-flex flex-row">
         <div class="filter-kit">
-            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <button class="filter-category-kit fw-500">Categoria <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
             <div class="options-category-kit">
                 <div class="option-main-kit">
                     <a href="#">Todas as categorias</a>
@@ -105,28 +105,20 @@
             </div>
         </div>
         <div class="filter-kit">
-            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
-            <div class="options-category-kit">
-                <div class="option-main-kit">
-                    <a href="#">Todas as categorias</a>
-                    <p>(1.340)</p>
-                </div>
-                <div class="option-kit">
-                    <a href="#">Categoria y</a>
-                    <p>(1.000)</p>
-                </div>
-            </div>
-        </div>
-        <div class="filter-kit">
-            <button class="filter-category-kit fw-500">Filter <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
-            <div class="options-category-kit">
-                <div class="option-main-kit">
-                    <a href="#">Todas as categorias</a>
-                    <p>(1.340)</p>
-                </div>
-                <div class="option-kit">
-                    <a href="#">Categoria y</a>
-                    <p>(1.000)</p>
+            <button class="filter-radio-kit fw-500">Horário <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <div class="options-radio-kit">
+                <div class="radio-options-kit">
+                    <input type="radio" id="h24" name="time" class="radio-button" value="h24">
+                    <label for="h24" class="fw-500 ms-1 mb-2">24 Horas</label> <br>
+                    <input type="radio" id="h12" name="time" class="radio-button" value="h12">
+                    <label for="h12" class="fw-500 ms-1 mb-2">12 Horas</label><br>
+                    <input type="radio" id="hall" name="time" class="radio-button" value="hall">
+                    <label for="hall" class="fw-500 ms-1">Qualquer Horario</label>
+                    <hr>
+                    <div class="d-flex justify-content-between search-filter-buttons">
+                        <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-1">Limpar</a>
+                        <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-2">Ok</a>
+                    </div>
                 </div>
             </div>
         </div>
