Budget filter was added

--- a/search.html
+++ b/search.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="filter-kit">
+        <div class="filter-kit ms-3">
             <button class="filter-radio-kit fw-500">Horário <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
             <div class="options-radio-kit">
                 <div class="radio-options-kit">
@@ -119,6 +119,26 @@
                         <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-1">Limpar</a>
                         <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-2">Ok</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="filter-kit ms-3">
+            <button class="filter-budget-kit fw-500">Valor <span uk-icon="icon:  chevron-down;" class="ms-1"></span></button>
+            <div class="options-budget-kit">
+                <div class="budget-options-kit d-flex flex-row pb-2">
+                    <div class="left-budget-kit me-2">
+                        <label for="min" class="fw-500">Min.</label>
+                        <input type="text" name="" id="min" class="budget-input-kit mt-2" placeholder="Mínimo">
+                    </div>
+                    <div class="left-budget-kit">
+                        <label for="max" class="fw-500">Máx.</label>
+                        <input type="text" name="" id="max" class="budget-input-kit mt-2" placeholder="Máximo">
+                    </div>
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between search-filter-buttons">
+                    <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-1">Limpar</a>
+                    <a href="#" class="border-button-link-2 d-flex align-items-center fw-500 align-self-center text-center search-button-2">Ok</a>
                 </div>
             </div>
         </div>
